--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.16.13",
+    "bootstrap": "^5.1.0",
+    "next": "^11.1.2",
     "react": "^17.0.2",
+    "react-anchor": "^5.0.0",
+    "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "scrollreveal": "^4.0.9",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
