--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.13",
-    "bootstrap": "^5.1.0",
+    "bootstrap": "^5.1.1",
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-anchor": "^5.0.0",
-    "react-bootstrap": "^2.0.0-beta.6",
+    "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.3.0",
